@@ -1,6 +1,5 @@
-
 # 1st stage, build the app
-FROM maven:3.8.6-openjdk-18 as build
+FROM maven:3.9.0-eclipse-temurin-19 as build
 
 WORKDIR /helidon
 
@@ -8,23 +7,23 @@ WORKDIR /helidon
 # Incremental docker builds will always resume after that, unless you update
 # the pom
 ADD pom.xml .
-RUN --mount=type=cache,target=/root/.m2 mvn package -Dmaven.test.skip -Declipselink.weave.skip
+RUN mvn package -Dmaven.test.skip -Declipselink.weave.skip
 
 # Do the Maven build!
 # Incremental docker builds will resume here when you change sources
 ADD src src
-RUN mvn package
-# RUN mvn package -DskipTests
+RUN mvn package -DskipTests
+
 RUN echo "done!"
 
 # 2nd stage, build the runtime image
-FROM openjdk:17.0.2
+FROM eclipse-temurin:19.0.2_7-jdk
 WORKDIR /helidon
 
 # Copy the binary built in the 1st stage
-COPY --from=build /helidon/target/k8s-helidon-app.jar ./
+COPY --from=build /helidon/target/cowweb-helidon.jar ./
 COPY --from=build /helidon/target/libs ./libs
 
-CMD ["java", "-jar", "k8s-helidon-app.jar"]
+CMD ["java", "--enable-preview" ,"-jar", "cowweb-helidon.jar"]
 
 EXPOSE 8080
